--- a/css/styles.css
+++ b/css/styles.css
@@ -152,6 +152,17 @@ a{
 	background-color: #F5DED8;
 	/*pink*/
 }
+.link{
+	background-color: #BFDFF6;
+	/*pink*/
+}
+#key{
+	position: fixed;
+	width: 10%; 
+}
+#key p{
+	margin-bottom: 5px; 
+}
 	
 /*desktop styles*/
 @media screen and (min-width: 768px) {
