--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ ul{
 a{
 		text-decoration: none; 
 		color: black;
-		border-bottom:  solid black  1px; 
+		/*border-bottom:  solid black  1px; */
 		cursor: pointer;
 
 		background-color: #BFDFF6;  
